--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,9 @@
 name = "jidaisya"
 compatibility_date = "2024-05-30"
 
-# Production environment configuration
-[env.production]
-build = { command = "pnpm install && pnpm run build", cwd = ".", watch_dir = "src" }
+# Build configuration for Cloudflare Pages
+[build]
+command = "pnpm run build"
 
 # Pages configuration
 pages_build_output_dir = "dist"
