--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.10.0",
-    "@astrojs/tailwind": "^5.1.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.10.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.7",
+    "@astrojs/sitemap": "^3.5.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
 }
