--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jidaisya-website",
+  "name": "jidaisha-website",
   "private": true,
   "packageManager": "pnpm@9.0.0",
   "type": "module",
